kubernetes/playgrpc.yml
---
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: "play-scala-grpc-example-v1-0-snapshot"
  labels:
    appName: "play-scala-grpc-example"
    appNameVersion: "play-scala-grpc-example-v1-0-snapshot"
spec:
  replicas: 2
  selector:
    matchLabels:
      appNameVersion: "play-scala-grpc-example-v1-0-snapshot"
  template:
    metadata:
      labels:
        appName: "play-scala-grpc-example"
        appNameVersion: "play-scala-grpc-example-v1-0-snapshot"
    spec:
      restartPolicy: Always
      containers:
        - name: "play-scala-grpc-example"
          image: "play-scala-grpc-example:1.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10000
              name: http
            - containerPort: 10001
              name: https
          volumeMounts: []
          command:
            - "/opt/docker/bin/play-scala-grpc-example"
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: "play-scala-grpc-example"
  name: "play-scala-grpc-example"
spec:
  ports:
    - name: http
      port: 10000
      protocol: TCP
      targetPort: 10000
    - name: https
      port: 10001
      protocol: TCP
      targetPort: 10001
  selector:
    appName: "play-scala-grpc-example"
---
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: "play-scala-grpc"
spec:
  rules:
  - host: "myservice.example.org"
    http:
      paths:
      - backend:
          serviceName: "play-scala-grpc-example"
          servicePort: 10000
